--- a/html/login.html
+++ b/html/login.html
@@ -12,11 +12,11 @@
             <h1>Giriş</h1>
             <div class="input-box">
                 <input  type="text" placeholder="Kullanıcı Adı" required>
-                <i class='bx bxs-user'></i>
+                <i class="fa-solid fa-user"></i>
             </div>
             <div class="input-box">
                 <input type="password" placeholder="Şifre" required>
-                <i class='bx bxs-lock-alt'></i>
+                <i class="fa-solid fa-lock"></i>
             </div>
 
             <div class="remember-forgot">
